Use revision in parent pom as master version